--- a/run_once_after_setup_b_node_packages.sh.tmpl
+++ b/run_once_after_setup_b_node_packages.sh.tmpl
@@ -63,7 +63,9 @@ if ask_install_dev_tools; then
             typescript-language-server \
             yaml-language-server \
             markdownlint-cli \
+            tree-sitter \
             svelte-language-server \
+            neovim \
             @supabase/supabase-js
         
         echo "✅ Installed Node.js tools with pnpm"
