added jsonlint installation

--- a/run_once_after_setup_a_dev_tools.sh.tmpl
+++ b/run_once_after_setup_a_dev_tools.sh.tmpl
@@ -75,7 +75,7 @@ if ask_install_dev_tools; then
             lua-language-server markdownlint-cli marksman mongosh neovim pandoc pinentry-mac pipx \
             plow postgresql@17 node@22 powerlevel10k prettier prettierd pyright python-lsp-server python@3.13 \
             qemu ranger ripgrep ruff visidata sst/tap/opencode stylua supabase/tap/supabase tmux \
-            tursodatabase/tap/turso typescript-language-server uvicorn vale watchman wrk yadm \
+            tursodatabase/tap/turso typescript-language-server jsonlint uvicorn vale watchman wrk yadm \
             yaml-language-server yt-dlp nvim zoxide zsh luajit
     fi
 
