--- a/run_once_after_setup_b_node_packages.sh.tmpl
+++ b/run_once_after_setup_b_node_packages.sh.tmpl
@@ -56,6 +56,7 @@ if ask_install_dev_tools; then
             @compodoc/live-server \
             @olrtg/emmet-language-server \
             @tailwindcss/language-server \
+            jsonlint \
             corepack@0.34.0 \
             eas-cli@16.19.1 \
             prettier \
