updated nvim clipboard to osc52

--- a/run_once_after_setup_b_node_packages.sh.tmpl
+++ b/run_once_after_setup_b_node_packages.sh.tmpl
@@ -65,6 +65,7 @@ if ask_install_dev_tools; then
             yaml-language-server \
             markdownlint-cli \
             tree-sitter \
+            tree-sitter-cli \
             svelte-language-server \
             neovim \
             @supabase/supabase-js
