using sudo for npm install

--- a/run_once_after_setup_b_node_packages.sh.tmpl
+++ b/run_once_after_setup_b_node_packages.sh.tmpl
@@ -27,7 +27,7 @@ if ask_install_dev_tools; then
     echo "Home directory: $HOME_DIR"
 
     # Install nvim-tree-sitter with npm (otherwise it does not work)
-    npm install -g tree-sitter-cli
+    sudo npm install -g tree-sitter-cli
 
     # -------------------------------
     # Install pnpm (cross-platform)
