added tmux installation

--- a/run_once_after_setup_a_dev_tools.sh.tmpl
+++ b/run_once_after_setup_a_dev_tools.sh.tmpl
@@ -368,6 +368,11 @@ if [[ "$OS" == "linux" ]]; then
 fi
 
 # -------------------------------
+# TMUX for both OS
+# -------------------------------
+git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+
+# -------------------------------
 # Oh My Zsh for both OS
 # -------------------------------
 if [ ! -d "$HOME_DIR/.oh-my-zsh" ]; then
