added gtop installation

--- a/run_once_after_setup_a_dev_tools.sh.tmpl
+++ b/run_once_after_setup_a_dev_tools.sh.tmpl
@@ -71,7 +71,7 @@ if ask_install_dev_tools; then
         brew update
         brew install \
             black cocoapods colima docker efm-langserver fd ffmpeg fzf ghostscript \
-            git git-filter-repo gnupg go htop icu4c@76 imagemagick isort jsonlint lazygit \
+            git git-filter-repo gnupg go icu4c@76 imagemagick isort jsonlint lazygit \
             lua-language-server markdownlint-cli marksman mongosh neovim pandoc pinentry-mac pipx \
             plow postgresql@17 node@22 powerlevel10k prettier prettierd pyright python-lsp-server python@3.13 \
             qemu ranger ripgrep ruff visidata sst/tap/opencode stylua supabase/tap/supabase tmux \
@@ -117,7 +117,7 @@ if ask_install_dev_tools; then
         sudo apt update
         sudo apt install -y \
             software-properties-common \
-            fd-find fzf htop tmux zsh ripgrep gnupg git  \
+            fd-find fzf tmux zsh ripgrep gnupg git  \
             ffmpeg ghostscript imagemagick qemu-kvm libvirt-daemon-system \
             libvirt-clients bridge-utils virtinst virt-manager postgresql postgresql-contrib \
             yadm watchman xclip liblua5.1-0-dev luarocks 
