--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -1,3 +1,5 @@
+HOME_DIR="{{ .chezmoi.homeDir }}"
+
 # bootstrap tpm
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
@@ -59,9 +61,9 @@ set -g @sessionx-bind 'C-f'
 # set -g @sessionx-filtered-sessions 'nested-'
 # set -g @sessionx-bind-zo-new-window 'ctrl-y'
 # set -g @sessionx-auto-accept 'off'
-set -g @sessionx-custom-paths '/Users/giygas/Projects'
+set -g @sessionx-custom-paths '$HOME_DIR/Projects'
 set -g @sessionx-fzf-builtin-tmux 'on'
-set -g @sessionx-x-path '/Users/giygas/.config'
+set -g @sessionx-x-path '$HOME_DIR/.config'
 set -g @sessionx-window-height '75%'
 set -g @sessionx-window-width '65%'
 set -g @sessionx-zoxide-mode 'on'
