added ping command to linux installation

--- a/run_once_after_setup_a_dev_tools.sh.tmpl
+++ b/run_once_after_setup_a_dev_tools.sh.tmpl
@@ -157,7 +157,7 @@ if ask_install_dev_tools; then
         sudo apt update
         sudo apt install -y \
             software-properties-common \
-            fd-find tmux zsh ripgrep gnupg git  \
+            fd-find tmux zsh ripgrep gnupg git iputils-ping \
             ffmpeg ghostscript imagemagick qemu-kvm libvirt-daemon-system \
             libvirt-clients bridge-utils virtinst virt-manager postgresql postgresql-contrib \
             yadm watchman xclip liblua5.1-0-dev luarocks 
